# python_project

./: package-lock.json
userhub_app/backend/: README.md  main.py  pyproject.toml
userhub_app/backend/api/: user.py
userhub_app/backend/core/: config.py  container.py
userhub_app/backend/db/: session.py
userhub_app/backend/interfaces/: user_repository.py  user_service.py
userhub_app/backend/models/: user.py
userhub_app/backend/repositories/: user_repository.py
userhub_app/backend/schemas/: user.py
userhub_app/backend/services/: user_service.py
userhub_app/backend/utils/: exceptions.py
userhub_app/client/: angular.json  package-lock.json
userhub_app/client/src/: index.html  index.ts  main.ts  styles.css
userhub_app/client/src/api/: base-api.service.ts  user-api.service.ts
userhub_app/client/src/app/: api.service.ts  app.component.ts  app.css  signin.component.css  signin.component.ts  user-create-form.component.css  user-create-form.component.ts  user-list.component.css  user-list.component.ts
userhub_app/client/src/components/signin/: signin.component.ts
userhub_app/client/src/components/user-create-form/: user-create-form.component.css  user-create-form.component.ts
userhub_app/client/src/components/user-list/: user-list.component.ts
userhub_app/client/src/layout/footer/: footer.component.ts  (+1 more)
userhub_app/client/src/models/: user.model.ts
userhub_app/client/src/pages/: app.component.ts  app.css
userhub_app/client/src/routes/: app.routes.ts
userhub_app/client/src/theme/: styles.css
userhub_app/client/src/utils/: app.config.ts  app.ts
(+15 files in other folders)
